# be-secret-app

./: App.tsx  Dockerfile  README.md  app.json  docker-compose.yml  eas.json  esa_error.txt  metro.config.js  package-lock.json  package.json
.github/workflows/: build-apk.yml  build-dev-apk.yml
crypt/: Cargo.toml  Dockerfile  docker-compose.yml  uniffi-bindgen.rs
crypt/android/bindings/uniffi/crypt_core/: crypt_core.kt
crypt/src/: cipher.rs  constants.rs  error.rs  file.rs  kdf.rs  lib.rs
modules/rust-crypt-core/: expo-module.config.json  index.ts
modules/rust-crypt-core/android/: build.gradle
modules/rust-crypt-core/ios/: RustCryptCore.podspec  RustCryptCoreModule.swift  RustCryptCoreView.swift
modules/rust-crypt-core/src/: RustCryptCore.types.ts  RustCryptCoreModule.ts  RustCryptCoreModule.web.ts  RustCryptCoreView.tsx  RustCryptCoreView.web.tsx
src/app/: App.tsx
src/app/navigation/: MainNavigator.tsx
src/app/providers/: ThemeProvider.tsx
src/components/: Header.tsx  Loading.tsx  SnackBar.tsx
src/features/home/components/: MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
src/features/home/hooks/: useIndex.ts  useMessageBubble.ts  useMessageInput.ts  useMessageList.ts
src/features/home/mappers/: messageMapper.ts
src/features/home/queries/: homeQueries.ts
src/features/home/screens/: Decrypt.tsx  Encrypt.tsx  index.tsx
src/features/home/types/: message.ts  messageEntity.ts  messageTable.ts
src/lib/: cryptCore.ts
src/lib/db/: schema.ts  sqlite.ts
src/theme/: ThemeContext.tsx  colors.ts  index.ts  typography.ts
(+18 files in other folders)
