[package]
name = "crypt-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
aes-gcm = "=0.10.3"
argon2 = "=0.5.0"
rand = "=0.8.5"
zeroize = { version = "=1.7.0", features = ["derive"] }
thiserror = "1.0"
base64ct = "=1.6.0"
password-hash = "=0.5.0"
getrandom = "0.2"
uniffi = { version = "0.27", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27", features = [ "build" ] }

[dev-dependencies]
hex = "0.4"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"